--- a/public/styles.scss
+++ b/public/styles.scss
@@ -8,11 +8,81 @@
     margin: 0;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 html {
     font-size: calc(1rem + 0.5vw);
     color-scheme: light dark;
 }
 
+ul,
+ol,
+li {
+    padding: 0;
+    list-style-type: none;
+}
+
+
 body {
+    display: flex;
+    flex-direction: column;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.navbar {
+    background-color: grey;
+
+    flex: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+
+    &__menu {
+        display: flex;
+        gap: 0.5rem;
+    }
+}
+
+.app {
+    flex: 9;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 1rem;
+    overflow-y: hidden;
+
+}
+
+.budgetview {
+    flex: 1;
+
+}
+
+.scanner {
+    flex: 2;
+}
+
+.cartview {
+    flex: 4;
+    overflow: auto;
+
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+
+    &__products-list {
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+
+        &__item {
+            border: solid 2px black;
+            padding: 0.25rem;
+        }
+    }
 }
